# local-llm-stack

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP_CHECKLIST.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  env.example
.github/: dependabot.yml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  label-sync.yml  smoke-test.yml
backend/: manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/competitions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/competitions/management/commands/: import_competition.py
backend/competitions/migrations/: 0001_initial.py
backend/competitions/services/: import_service.py  organization_service.py  series_service.py
backend/competitions/tests/: factories.py  test_import_integration.py  test_import_service.py
backend/docs/adr/: 001-competition-import-architecture.md
backend/judoshiai/: settings.py  urls.py  wsgi.py
claude/: settings.json
docker/: docker-compose.gpu.yml  docker-compose.yml  entrypoint-litellm.sh  litellm-config.yaml  litellm.Dockerfile
docs/: CLAUDE_CODE_ENHANCEMENTS.md  README.md  api-access.md  architecture.md  claude-code-setup.md  configuration.md  gist-usage.md  models.md  troubleshooting.md
scripts/: smoke-test.ps1
